Fri Oct 19 19:29:11 2012  Koichi Sasada  <ko1@atdot.net>

	* method.h (rb_method_cfunc_t::invoker): add new field (func ptr)
	  `invoker'. `invoker' function invoke cfunc body
	  (rb_method_cfunc_t::func).
	  `invoker' is set at method definition timing.
	  With this change, the big `switch' (branch) in `call_cfunc()'
	  is no longer needed.
	  However, the performance benefit is only a bit.

	* vm_core.h (rb_call_info_t::aux::func): add a new field to store
	  cfunc body function pointer.

	* vm_method.c (call_cfunc_invoker_func): add a new function which
	  returns a suitable invoke function.

	* vm_method.c (setup_method_cfunc_struct): added.

	* vm_method.c (rb_add_method): fix to set `invoker'.

	* vm_eval.c (vm_call0_body): catch up above changes.

	* vm_insnhelper.c (call_cfunc): removed.

	* vm_insnhelper.c (vm_call_cfunc): fix to call cfunc body
	  with `invoker' function.

Fri Oct 19 16:55:58 2012  Koichi Sasada  <ko1@atdot.net>

	* eval.c, vm_eval.c: use TH_PUSH_TAG() instead of PUSH_TAG().

Fri Oct 19 11:13:55 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: remove unexpected `output'.
	  (commit miss)

Fri Oct 19 10:24:03 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_search_method): remove needless local variable.

Fri Oct 19 10:22:26 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bmx_temp.rb: removed.
	  This file should not be in repository.

Fri Oct 19 10:20:10 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: add new option `--ruby-arg [ARG]'
	  which is passed as a launch parameter for each ruby's execution.
	  ($ ruby [ARG] [File])

Thu Oct 18 18:42:35 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_send_simple): move the location of
	  `opt_send_simple' to the place near `send' definition.
	  (to take care about icache locality).

Thu Oct 18 18:29:25 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (send): remove unused condition.
	  This condition will be true after r37258.
